# core-utils

./: Cargo.toml
.github/workflows/: ci.yaml
cat/src/: main.rs  test.rs
cat/src/tests/: cat.rs  cat_options.rs  file_content.rs  mod.rs  parse_cli_args.rs
ls/src/: main.rs
src/: cat.rs  cp.rs  ls.rs  pwd.rs  rm.rs  rmdir.rs
src/cat/: Cargo.toml
src/cat/src/: cat.rs  cat_options.rs  cli_args.rs  cli_param.rs  file_content.rs  it.rs  lib.rs  main.rs  traits.rs  types.rs
src/cat/src/tests/: cat.rs  cat_options.rs  file_content.rs  mod.rs  parse_cli_args.rs
src/cat/tests/: cat.rs  cat_options.rs  cli_args.rs  file_content.rs  parse_cli_args.rs
src/core/: error.rs
src/ls/src/: main.rs
src/ls/src/tests/: mod.rs  parse_cli_args.rs
src/utils/src/: filesystem.rs  lib.rs
src/utils/src/tests/: utils.rs
src/utils/tests/: filesystem.rs  utils.rs
